# AIDrone-Autonomy-Engine

drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/action/: ExecuteMission.action
drone_msgs/msg/: Configuration.msg  Mission.msg  Task.msg
drone_msgs/srv/: LoadConfiguration.srv  LoadMission.srv  PreFlightCheck.srv
flight_assistant/: CMakeLists.txt  package.xml
flight_controller/: CMakeLists.txt  package.xml
flight_director/: package.xml  setup.cfg  setup.py
flight_director/flight_director/: APIServerNode.py  DirectorNode.py  MonitorNode.py  fms_interface.idl  fms_interface.py
flight_director/launch/: apm_config.yaml  apm_pluginlists.yaml  default.launch.xml  sitl.launch.xml
mission_executor/: CMakeLists.txt  package.xml
mission_executor/include/mission_executor/: visibility_control.h
mission_executor/src/: executor_node.cpp
